# annales

./: NOTES.md  README.md  annales.cabal  stack.yaml
app/: Main.hs
app/Annales/: Buildings.hs  Court.hs  Courtiers.hs  Deaths.hs  Descriptions.hs  Emperor.hs  Empire.hs  Names.hs  Omens.hs  Projects.hs  Succession.hs  Tribes.hs
data/: abstractions.txt  acclamations.txt  acclamations_sensible.txt  acclamations_silly.txt  adjectives.txt  adverbs.txt  affairs.txt  allies.txt  animals.txt  artifacts.txt  body_parts.txt  buildings.txt  cosmetics.txt  depravity1.txt  diseases.txt  divine.txt  drinks.txt  dup_dis.txt  enthroned.txt  epithets.py  epithets.txt  extract.py  festivities.txt  food2.txt  foods.txt  foods_old.txt  glossatory_all.txt  gods.txt  hyponyms.py  immorality.txt  knife.txt  men.txt  monsters.txt  nations.txt  old_diseases.txt  output.txt  participle.txt  pasttense.txt  people.txt  phenomena.txt  (+13 more)
output/: annales.md  sample-1.0.0.0-Bladda.txt  sample-1.1.0.0-Limonication.md  sample-1.3.0.0-Applu-Terpron.md  sample-1.3.1.txt  sample-1.4.0.0-Indolation.md  sample-1.5.0.0-Genus-And-Mounty.md  sample-1.6.0.0-Homilation-I.md  sample-1.7.0.0-Gingtel-Parie.md  sample-1.8.0.0-Mallectoria.md
