name:                annales
version:             0.1.0.0
synopsis:            Generates randomised annales of rulers 
description:         Please see README.md
homepage:            https://github.com/spikelynch/annales#readme
license:             BSD3
license-file:        LICENSE
author:              Mike Lynch
maintainer:          mike@mikelynch.org
copyright:           2016 mike lynch
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      app
  exposed-modules:     Annales.Empire
                     , Annales.Omens
                     , Annales.Tribes
                     , Annales.Deaths
                     , Annales.Court
  build-depends:       base >= 4.7 && < 5
                     , text >= 1.2.1.3 
                     , containers 
                     , directory >= 1.2.2
                     , regex-posix
                     , random >= 1.1
                     , textgen >= 0.1
  default-language:    Haskell2010

executable annales-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , annales
                     , text
                     , containers 
                     , directory >= 1.2.2
                     , regex-posix
                     , random >= 1.1
                     , textgen >= 0.2
  other-modules:       Annales.Empire
                     , Annales.Omens
                     , Annales.Tribes
                     , Annales.Deaths
                     , Annales.Court
  default-language:    Haskell2010

test-suite annales-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , annales
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/spikelynch/annales
